/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://oss.sonatype.org/content/repositories/snapshots')
    }

    maven {
        url = uri('https://repo.velocitypowered.com/snapshots/')
    }

    maven {
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.spongepowered.org/maven')
    }

    maven {
        url = uri('https://oss.sonatype.org/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://hub.jeff-media.com/nexus/repository/jeff-media-public/')
    }

    maven {
        url = uri('https://repo.extendedclip.com/content/repositories/placeholderapi/')
    }

    maven {
        url = uri('https://repo.spicord.org/')
    }

    maven {
        url = uri('https://m2.dv8tion.net/releases/')
    }

    maven {
        url = uri('https://jitpack.io')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api 'net.kyori:adventure-api:4.11.0'
    api 'net.kyori:adventure-text-serializer-plain:4.11.0'
    api 'net.kyori:adventure-platform-bukkit:4.1.1'
    api 'net.kyori:adventure-platform-bungeecord:4.1.1'
    api 'mysql:mysql-connector-java:8.0.28'
    api 'com.jeff_media:SpigotUpdateChecker:3.0.0'
    api 'me.carleslc.Simple-YAML:Simple-Yaml:f958b0a'
    api 'org.bstats:bstats-bukkit:3.0.0'
    api 'com.vdurmont:emoji-java:5.1.1'
    api 'com.google.code.gson:gson:2.10'
    compileOnly 'net.md-5:bungeecord-api:1.18-R0.1-SNAPSHOT'
    compileOnly 'com.velocitypowered:velocity-api:3.1.0'
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'org.spongepowered:spongeapi:9.0.0-SNAPSHOT'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    compileOnly 'me.clip:placeholderapi:2.11.1'
    compileOnly 'org.spicord:spicord-common:4.0.0'
    compileOnly 'net.dv8tion:JDA:4.2.1_253'
    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
    compileOnly 'net.luckperms:api:5.4'
}

group = 'DiscordNotify'
version = '3.2.2'
description = 'DiscordNotify'
java.sourceCompatibility = JavaVersion.VERSION_1_8

sourceSets {
    main { 
        java { srcDirs = ["src/main/java"] }
        resources { srcDir "src/main/resources" }
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

tasks.withType(Copy).all { 
	duplicatesStrategy 'exclude' 
}

tasks.withType(Jar).all { 
	duplicatesStrategy 'exclude' 
}

jar {
    from {
        configurations.compileClasspath.findAll { file ->
            //project.logger.lifecycle("File: ${file.name}")
	        file.name != "VaultAPI-1.7.jar"
	        file.name != "placeholderapi-2.11.1.jar"
	        file.name != "api-5.4.jar"
    	}.sort { it.name }
            .collect { file ->
                file.isDirectory() ? file : zipTree(file)
            }
    }
}
